# festivevoice

./: .gitignore  .gitlab-ci.yml  .replit  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  app.py  pyproject.toml  replit.md
.gitlab/merge_request_templates/: Bug.md  Default.md  Documentation.md
.streamlit/: config.toml
attached_assets/: Pasted-Viswam-ai-Summer-of-AI-Internship-2025-Intern-Instructions-Welcome-to-the-Summer-of-AI-2025-Thi-1756572522513_1756572522515.txt
data/: corpus_data.json  corpus_data.json.backup  users.json
festivevoice/: README.md
pages/: 1_Voice_Stories.py  1_🏛️_Historical_Timeline.py  2_Video_Traditions.py  2_📚_Language_Learning.py  3_🎭_Cultural_Stories.py  4_🧠_Cultural_Quiz.py  5_Community_Gallery.py  5_📊_Data_Export.py  6_Festivals_Events.py  6_🎊_Festivals_Events.py  7_My_Contributions.py  7_🖼️_Festival_Images.py
static/audio/: deepavali_telugu_celebrations.txt  sri_rama_navami_telugu.txt  vinayaka_chavithi_telugu.txt
static/video/: bharatanatyam_sample.txt  garba_sample.txt
utils/: ai_validation.py  auth.py  data_manager.py  theming.py  translations.py
